fix overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,11 @@
   }
 }
 
+.slick-next {
+  right: auto !important;
+}
+
+
 @layer utilities {
   @screen md {
     .text-navbar {
